<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:background="#FF393F5E"
        android:textSize="50sp"
        android:fontFamily="@font/ubuntu"
        android:layout_weight="3"
        android:gravity="center|end"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/white"
        android:background="#FF393F5E"
        android:gravity="center|end"
        android:textSize="35sp"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/acbutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:background="@drawable/square_button_background"
            android:textSize="25sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0" />

        <Button
            android:id="@+id/plusorminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:background="@drawable/square_button_background"
            android:text="@string/plusorminus"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0" />

        <Button
            android:id="@+id/percentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:fontFamily="@font/ubuntu"
            android:background="@drawable/square_button_background"
            android:textColor="@color/white"
            android:text="@string/percentage"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu"
            android:background="@drawable/square_button_background"
            android:text="@string/divide"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/_7"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:background="@color/purple"
            app:backgroundTint="@color/purple"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/_8"
            android:fontFamily="@font/ubuntu"
            android:background="@color/purple"
            app:backgroundTint="@color/purple"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/_9"
            android:background="@color/purple"
            app:backgroundTint="@color/purple" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:fontFamily="@font/ubuntu"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/x"
            android:layout_weight="1"
            android:background="@drawable/square_button_background"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:text="@string/_4"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="27sp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@drawable/square_button_background"/>
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple"  />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@drawable/square_button_background" />
        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/_0"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/btndot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:background="@color/purple"
                app:backgroundTint="@color/purple" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#c0c0c0"/>

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:background="@drawable/square_button_background" />
    </LinearLayout>

</LinearLayout>